# aoc-2024

./: .gitignore  Cargo.toml
benches/: aoc-bench.rs
src/: lib.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
src/utilities/: grid.rs  point.rs  string.rs  tuple.rs
