[package]
name = "aoc_rust_2024"
version = "0.1.0"
authors = ["broccoli <me@broccol.ai>"]
edition = "2021"
repository = "https://github.com/username/aoc-rust-2024"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = { git = "https://github.com/broccolai/yaah.git" }
clap = { version = "4.5", features = ["derive"] }

criterion = "0.4"
rayon = "1.10.0"
itertools = "0.12.1"
grid = "0.12.0"
regex = "1.11.1"

[[bench]]
name = "aoc-bench"
harness = false

